--- a/RecipeTop/main/templates/main/edit.html
+++ b/RecipeTop/main/templates/main/edit.html
@@ -165,7 +165,7 @@
 						{% endfor %}
 
 					</div>
-					<button onclick="addIngredient()" class='waves-effect waves-light btn blue-grey' type="button">Add another Ingredient</button>
+					<button onclick="addIngredient()" class='waves-effect waves-light btn-large blue-grey' type="button">Add another Ingredient</button>
 
 					<br>
 					<br>
@@ -175,9 +175,6 @@
 				</div>
 				{% csrf_token %}
 			</form>
-
-				
-
 		</div>
 	    <br>
 	    <div id="edit_utensils">
@@ -256,7 +253,7 @@
 				        {% endfor %}
 
 			        </div>
-			        <button class='waves-effect waves-light btn blue-grey' type="button" onclick="addStep()">Add step</button>
+			        <button class='waves-effect waves-light btn-large blue-grey' type="button" onclick="addStep()">Add step</button>
 			    </div>
 				<div class="modal-footer">
 					<button type="submit" class=' modal-close waves-effect waves-dark teal lighten-1 btn-large'>Save</button>
