--- a/RecipeTop/main/static/main/css/user_prf.css
+++ b/RecipeTop/main/static/main/css/user_prf.css
@@ -24,7 +24,7 @@
   background: #f5f5f5;
   font-family: "Roboto", sans-serif;
   width: 60vw;
-  height: 75vh;
+  height: 80vh;
   border-radius: 10px;
   -webkit-box-shadow: -1px 3px 15px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 3px 15px 0px rgba(0, 0, 0, 0.75);
@@ -47,5 +47,13 @@
     display: flex;
     justify-content: center;
     align-content: center;
+  }
+  #prf_btn{
+      margin-bottom: 2%;
+  }
+
+  #jnk{
+      
+      width:30%;
   }
   
