--- a/RecipeTop/main/templates/main/search.html
+++ b/RecipeTop/main/templates/main/search.html
@@ -180,7 +180,7 @@
                     </div>
                     <!-- inside the card stuff -->
                     <div class="gallery-body">
-                            <div class="title-wrapper">
+                            <div class="title-wrapper cursive-title">
                               <h3>{{recipe.title}}</h3>
                             </div>
                             <div class="content-wrapper">
