--- a/RecipeTop/main/static/main/css/home.css
+++ b/RecipeTop/main/static/main/css/home.css
@@ -1,3 +1,8 @@
+.cursive-title{
+  font-family: 'Lobster', cursive;
+
+}
+
 .Home_container {
   position: relative;
   width: 100%;
@@ -70,7 +75,7 @@
 }
 
 .description{
-  text-align: center;
+  /*text-align: center;*/
   margin:0 auto;
   padding-top:3%;
 }
