--- a/RecipeTop/main/templates/main/users.html
+++ b/RecipeTop/main/templates/main/users.html
@@ -100,8 +100,8 @@
     </div>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src={% static "main/js/users.js" %}></script>
+<script src={% static "main/js/materialize.min.js" %}></script>
 
 </body>
 </html>
