Import hearted js on home page

--- a/RecipeTop/main/templates/main/home.html
+++ b/RecipeTop/main/templates/main/home.html
@@ -189,4 +189,5 @@
 <script src={% static "main/js/gallery/init.js" %}></script>
 <script src={% static "main/js/gallery/color-thief.min.js" %}></script>
 <script src={% static "main/js/gallery/imagesloaded.pkgd.min.js" %}></script>
+<script src={% static "main/js/hearted.js" %}></script>
 {% endblock %}
