Add heart to cards on home

--- a/RecipeTop/main/static/main/css/cards.css
+++ b/RecipeTop/main/static/main/css/cards.css
@@ -16,12 +16,21 @@
 
 }
 
+.smaller_float_heart{
+  position: absolute;
+  top: 2px;
+  right: 3px;
+  z-index: 5;
+  font-size: 30px;
+
+}
+
 .float_heart {
   position: absolute;
-  top: 5%;
-  right: 4%;
+  top: 3px;
+  right: 12px;
   z-index: 5;
-  font-size: 45px;
+  font-size: 40px;
 }
 
 .ingredient_props span {
