--- a/RecipeTop/main/templates/main/home.html
+++ b/RecipeTop/main/templates/main/home.html
@@ -51,6 +51,7 @@
                                     <a class="gallery-cover gray">
                                         <img class="responsive-img" src="{{recipe.image.url}}" alt="placeholder">
                                     </a>
+                                    <div class="prop2"><i class="material-icons hearted smaller_float_heart pink-text" id="hearted_{{recipe.id}}_prop">{% check_hearted recipe.id %}</i></div>
                                     <!-- gallery header -->
                                     <div class="gallery-header">
                                             <div class="ingredient_title">
