--- a/RecipeTop/main/static/main/css/user_prf.css
+++ b/RecipeTop/main/static/main/css/user_prf.css
@@ -1,6 +1,6 @@
 
 .top_br{
-    height:10vh;
+    height:20vh;
     background-color: #b0bec5;
 }
 .prefences_cont{
@@ -20,15 +20,18 @@
     padding-top:4%;
   }
 .pref{
-  margin: 0 auto;
+  margin: auto;
+  padding: 10px;
   background: #f5f5f5;
   font-family: "Roboto", sans-serif;
-  width: 60vw;
-  height: 80vh;
-  border-radius: 10px;
+  width: 50vw;
+  height: 70vh;
+  border-radius: 2px;
+  /*
   -webkit-box-shadow: -1px 3px 15px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 3px 15px 0px rgba(0, 0, 0, 0.75);
   box-shadow: -1px 3px 15px 0px rgba(0, 0, 0, 0.75);
+  */
 }
 .icons{
     margin: 0 auto;
