--- a/RecipeTop/main/static/main/css/users.css
+++ b/RecipeTop/main/static/main/css/users.css
@@ -154,7 +154,7 @@ body {
   justify-items: center;
   align-items: center;
   width: 100%;
-  height: 35vh;
+  /*height: 35vh;*/
   padding-top: 2%;
 }
 .choices_container img {
