--- a/RecipeTop/main/static/main/css/cards.css
+++ b/RecipeTop/main/static/main/css/cards.css
@@ -18,8 +18,8 @@
 
 .smaller_float_heart{
   position: absolute;
-  top: 1%;
-  right: 2%;
+  top: 2px;
+  right: 3px;
   z-index: 5;
   font-size: 35px;
 
