--- a/RecipeTop/main/templates/main/home.html
+++ b/RecipeTop/main/templates/main/home.html
@@ -57,6 +57,11 @@
                                             <div class="ingredient_title">
                                                  <span class="recipe_title title">{{recipe.title}}</span>
                                             </div>
+                                            <div class="ingredient_props2">
+                                                    <div class="prop1"><i class="material-icons teal-text color_links text-lighten-3">star</i><span>{{recipe.rating}}</span></div>
+                                                    <div class="prop2"><i class="material-icons teal-text color_links text-lighten-3">cake</i><span>{{recipe.difficulty}}</span></div>
+                                                    <div class="prop1"><i class="material-icons teal-text color_links text-lighten-3">access_time</i><span>{{recipe.estDuration}}<span id="time">min</span></span></div>
+                                            </div>
                                     </div>
                                     <!-- gallery body -->
                                     <div class="gallery-body">
