--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -86,7 +86,8 @@
         {% endblock %}
     
 
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <!--script src="https://code.jquery.com/jquery-3.1.0.min.js"></script-->
+    <script src={% static "main/js/jquery/3.1.0/jquery-3.1.0.min.js" %}></script>
     <script src={% static "main/js/materialize.min.js" %}></script>
     <script src={% static "main/js/menu.js" %}></script>
     
