--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -34,7 +34,7 @@
                      		<div class="step-content">
                         		<div class="row">
                            			<div class="input-field">
-										<input type="text" name="title" required>
+										<input type="text" name="title" value="">
 										<label for="title">Title</label>
 									</div>
 									<br>
@@ -51,7 +51,7 @@
                      		<div class="step-content">
                         		<div class="row">
                            			<div class="input-field">
-										<input type="text" name="description" required>
+										<input type="text" name="description" value="">
 										<label for="description">Description</label>
 									</div>
                         		</div>
@@ -105,12 +105,12 @@
 											<td>
 												<!-- <input type="text" name="ingredient" placeholder="Enter your ingredient" id="autocomplete-input" class="autocomplete"> -->
 												<div class="input-field">
-													<input type="text" name="ingredient" placeholder="Enter your ingredient" id="autocomplete-input" class="autocomplete" required>
+													<input type="text" name="ingredient" placeholder="Enter your ingredient" id="autocomplete-input" class="autocomplete">
 												</div>
 											</td>   
-											<td><input type="text" name="quantity" placeholder="Enter your quantity" required></td>
+											<td><input type="text" name="quantity" placeholder="Enter your quantity" ></td>
 											<td class="input-field">
-												<select name="unit" required>
+												<select name="unit" >
 													<option value="" disabled selected>Choose the unit</option>
 													<option value="1" name="">cup(s)</option>
 													<option value="2" name="">kg</option>
