Store dependencies locally

--- a/RecipeTop/main/templates/main/follow_steps.html
+++ b/RecipeTop/main/templates/main/follow_steps.html
@@ -6,7 +6,8 @@
 {% block stylesheet %}
 <link rel="stylesheet" href={% static "main/css/follow_steps.css" %}>
 <link rel="stylesheet" href={% static "main/css/mstepper.css" %}>
-<link href="https://cdn.jsdelivr.net/gh/StephanWagner/jBox@v0.6.1/dist/jBox.all.min.css" rel="stylesheet">
+<link rel="stylesheet" href={% static "main/css/jBox.all.min.css" %}>
+<!--link href="https://cdn.jsdelivr.net/gh/StephanWagner/jBox@v0.6.1/dist/jBox.all.min.css" rel="stylesheet"-->
 {% endblock %}
 
 
