ID for time change
changed time id

--- a/RecipeTop/main/static/main/css/cards.css
+++ b/RecipeTop/main/static/main/css/cards.css
@@ -132,7 +132,7 @@
   justify-items: center;
   align-items: center;
 }
-#time{font-size: 12px;}
+#timeC{font-size: 12px;}
 /*# sourceMappingURL=cards.css.map */
 
 /*# sourceMappingURL=cards.css.map */
